2014-06-01  Rene Liebscher <R.Liebscher@gmx.de>

	bug #42337 avrdude.conf updates for UM232H/CM232H
	* avrdude.conf.in: fixed entries as proposed

2014-05-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #41854: avrdude 6.1 does not compile on systems without libUSB
	Submitted by Didrik Madheden:
	* flip1.c: Provide dummy functions for the #ifndef HAVE_LIBUSB case
	* flip2.c: (Dito.)

2014-05-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libavrdude.h: Join the former "public" header files (avr.h avrpart.h pindefs.h
	serial.h fileio.h safemode.h update.h pgm_type.h config.h confwin.h lists.h) into
	a single header that can be included by anyone wanting to link against the
	library
	* avr.h: Remove file.
	* avrpart.h: (Dito.)
	* pindefs.h: (Dito.)
	* serial.h: (Dito.)
	* fileio.h: (Dito.)
	* safemode.h: (Dito.)
	* update.h: (Dito.)
	* pgm.h: (Dito.)
	* pgm_type.h: (Dito.)
	* config.h: (Dito.)
	* confwin.h: (Dito.)
	* lists.h: (Dito.)
	* Makefile.am: Adapt for new include file constellation; install shared lib
	* configure.ac: Bump version date
	* arduino.c: #include <libavrdude.h> rather than a bunch of different headers
	* avr910.c: (Dito.)
	* avr910.h: (Dito.)
	* avr.c: (Dito.)
	* avrftdi.c: (Dito.)
	* avrftdi_private.h: (Dito.)
	* avrftdi_tpi.c: (Dito.)
	* avrftdi_tpi.h: (Dito.)
	* avr.h: (Dito.)
	* avrpart.c: (Dito.)
	* avrpart.h: (Dito.)
	* bitbang.c: (Dito.)
	* buspirate.c: (Dito.)
	* butterfly.c: (Dito.)
	* config.c: (Dito.)
	* config_gram.y: (Dito.)
	* config.h: (Dito.)
	* confwin.c: (Dito.)
	* confwin.h: (Dito.)
	* dfu.c: (Dito.)
	* fileio.c: (Dito.)
	* fileio.h: (Dito.)
	* flip1.c: (Dito.)
	* flip1.h: (Dito.)
	* flip2.c: (Dito.)
	* flip2.h: (Dito.)
	* ft245r.c: (Dito.)
	* ft245r.h: (Dito.)
	* jtag3.c: (Dito.)
	* jtagmkI.c: (Dito.)
	* jtagmkII.c: (Dito.)
	* lexer.l: (Dito.)
	* libavrdude.h: (Dito.)
	* linuxgpio.c: (Dito.)
	* lists.c: (Dito.)
	* lists.h: (Dito.)
	* main.c: (Dito.)
	* par.c: (Dito.)
	* pgm.c: (Dito.)
	* pgm_type.c: (Dito.)